name issue resolved in superadmin, alignment fixes done in home page of superadmin

--- a/src/pages/AMChatAdmin/SearchUIAMChat.jsx/SearchUIAIChat.module.css
+++ b/src/pages/AMChatAdmin/SearchUIAMChat.jsx/SearchUIAIChat.module.css
@@ -53,7 +53,7 @@
 
 .AIChatInputBox {
   padding-top: 20px;
-  width: 100%;
+  width: 98%;
   height: 70px;
 }
 
