--- a/src/pages/AMChatAdmin/SuperAdminHeader/SuperAdminHeader.module.css
+++ b/src/pages/AMChatAdmin/SuperAdminHeader/SuperAdminHeader.module.css
@@ -27,8 +27,6 @@
     display: flex;
     align-items: center;
     margin-top: 20px;
-    height: 80px;
-    width:15%
   }
   
   .AdminProfileStyle {
